@@ -541,6 +541,9 @@ BUGFIXES:
 
   ZOOKEEPER-1867. Bug in ZkDatabaseCorruptionTest (fpj)
 
+  ZOOKEEPER-1573. Unable to load database due to missing parent node
+  (Vinayakumar B via phunt, fpj)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
